# DCIMe

./: .gitignore  README.md  TELEMETERY  build_wasm.ps1  index.html  package.json  pnpm-lock.yaml  read_excel.ps1  recovered_dictionary.ts  recovered_dictionary_utf8.ts  schema.sql  tsconfig.json
extracted_canvas/: [Content_Types].xml
extracted_canvas/docProps/: app.xml  core.xml
extracted_canvas/xl/: calcChain.xml  comments2.xml  sharedStrings.xml  styles.xml  workbook.xml
extracted_logbook/: [Content_Types].xml
extracted_logbook/docProps/: app.xml  core.xml
extracted_logbook/xl/: calcChain.xml  sharedStrings.xml  styles.xml  workbook.xml
public/: Blank_Monthly_Template.xlsx  template_commercial_logbook.xlsx  template_daily_canvas.xlsx  template_daily_canvas.xlsx.xlsx  ~$template_daily_canvas.xlsx
scratch/: check_compliance_reports.js  check_db.js  convert_schema.js  count_destinations.js  count_flat_mappings.js  diagnose_db.js  diagnose_edit_error.js  eval_temp.js  fix_site_uuid.js  inspect_all_sheets.js  inspect_columns.js  inspect_excel.js  inspect_table_columns.js  migrate_seeded_assets.js  old_schema.ts  old_schema_utf8.ts  older_schema.ts  older_schema_utf8.ts  print_destinations.js  read_db.js  read_excel.js  read_params.js  read_schema.js  restore_dictionary.js  run_eval.js  test_room_delete.js
src/app/: App.tsx  providers.tsx
src/pages/: AdminDashboardPage.tsx  AnalyticsPage.tsx  DataIngestionPage.tsx  (+2 more)
topology_engine/core/: CMakeLists.txt
topology_engine/core/include/: PowerMatrix.hpp
topology_engine/core/src/: PowerMatrix.cpp
(+160 files in other folders)
